# nl-case-analyzer

./: .gitignore  README.md  pyproject.toml
data/: Results.json
results/: Results.json  Results_2.json  Results_3.json
results/vizuals/: Analyseprocess.png:Zone.Identifier
src/: filtered_betrouwbaarheid_rechter.csv  rechter_standpunten.csv  visual.ipynb
src/nl_case_analyzer/: DataLoader.py  analyze.py  api_call.py  data_loader.py  json_writer.py  main.py  openai.py  openai_config.py  validate_json.py  visualizer.py
vizuals/: Nl-case-analyzer.drawio
