[tool.poetry]
name = "nl-case-analyzer"
version = "0.1.0"
description = ""
authors = ["RiesJads"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.53.0"
pydantic = "^2.9.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.4"
jsonschema = "^4.23.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
